<resources>
    <string name="app_name">MyChess</string>

    <string name="chessboard">chessboard</string>
    <string name="time">Time:</string>
    <string name="how_to_play"><a href="https://www.officialgamerules.org/chess">game rules</a></string>
    <string name="htl_rennweg"><a href="https://www.htlrennweg.at/">- htl rennweg -</a></string>
    <string name="github"><a href="https://github.com/dbrandstetter/MyChess.git">sourcecode on github</a></string>
    <string name="nickname_generator"><a href="https://www.namegeneratorfun.com/nickname">nickname generator</a></string>

    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>

    <string name="new_game"></string>
    <string name="about"></string>
    <string name="choose_a_name"></string>

    <string name="close_application_start">close application</string>
    <string name="close_application_about">close application</string>
    <string name="close_application_name">close application</string>
    <string name="close_application_game">close application</string>

    <string name="done">done</string>
    <string name="return_about">return</string>
    <string name="return_game">return</string>
    <string name="click_canceler">a blank button for when the game is stopped</string>

    <string name="start_screen">start screen</string>
    <string name="name_screen">name_screen</string>
    <string name="about_screen">about_screen</string>
    <string name="game_screen">game_screen</string>
    <string name="error_message">Please select a valid field</string>
    <string name="winner_white">white is the winner</string>
    <string name="winner_black">black is the winner</string>
    <string name="name_player_1">name of player 1</string>
    <string name="name_player_2">name of player 2</string>

    <string name="rook_black1">rook_black1</string>
    <string name="knight_black1">knight_black1</string>
    <string name="bishop_black1">bishop_black1</string>
    <string name="queen_black">queen_black</string>
    <string name="king_black">king_black</string>
    <string name="bishop_black2">bishop_black2</string>
    <string name="knight_black2">knight_black2</string>
    <string name="rook_black2">rook_black2</string>
    <string name="pawn_black1">pawn_black1</string>
    <string name="pawn_black2">pawn_black2</string>
    <string name="pawn_black3">pawn_black3</string>
    <string name="pawn_black4">pawn_black4</string>
    <string name="pawn_black5">pawn_black5</string>
    <string name="pawn_black6">pawn_black6</string>
    <string name="pawn_black7">pawn_black7</string>
    <string name="pawn_black8">pawn_black8</string>
    <string name="pawn_white1">pawn_white1</string>
    <string name="pawn_white2">pawn_white2</string>
    <string name="pawn_white3">pawn_white3</string>
    <string name="pawn_white4">pawn_white4</string>
    <string name="pawn_white5">pawn_white5</string>
    <string name="pawn_white6">pawn_white6</string>
    <string name="pawn_white7">pawn_white7</string>
    <string name="pawn_white8">pawn_white8</string>
    <string name="rook_white1">rook_white1</string>
    <string name="knight_white1">knight_white1</string>
    <string name="bishop_white1">bishop_white1</string>
    <string name="queen_white">queen_white</string>
    <string name="king_white">king_white</string>
    <string name="bishop_white2">bishop_white2</string>
    <string name="knight_white2">knight_white2</string>
    <string name="rook_white2">rook_white2</string>
    <string name="b00">b00</string>
    <string name="b01">b01</string>
    <string name="b02">b02</string>
    <string name="b03">b03</string>
    <string name="b04">b04</string>
    <string name="b05">b05</string>
    <string name="b06">b06</string>
    <string name="b07">b07</string>
    <string name="b10">b10</string>
    <string name="b11">b11</string>
    <string name="b12">b12</string>
    <string name="b13">b13</string>
    <string name="b14">b14</string>
    <string name="b15">b15</string>
    <string name="b16">b16</string>
    <string name="b17">b17</string>
    <string name="b20">b20</string>
    <string name="b21">b21</string>
    <string name="b22">b22</string>
    <string name="b23">b23</string>
    <string name="b24">b24</string>
    <string name="b25">b25</string>
    <string name="b26">b26</string>
    <string name="b27">b27</string>
    <string name="b30">b30</string>
    <string name="b31">b31</string>
    <string name="b32">b32</string>
    <string name="b33">b33</string>
    <string name="b34">b34</string>
    <string name="b35">b35</string>
    <string name="b36">b36</string>
    <string name="b37">b37</string>
    <string name="b40">b40</string>
    <string name="b41">b41</string>
    <string name="b42">b42</string>
    <string name="b43">b43</string>
    <string name="b44">b44</string>
    <string name="b45">b45</string>
    <string name="b46">b46</string>
    <string name="b47">b47</string>
    <string name="b50">b50</string>
    <string name="b51">b51</string>
    <string name="b52">b52</string>
    <string name="b53">b53</string>
    <string name="b54">b54</string>
    <string name="b55">b55</string>
    <string name="b56">b56</string>
    <string name="b57">b57</string>
    <string name="b60">b60</string>
    <string name="b61">b61</string>
    <string name="b62">b62</string>
    <string name="b63">b63</string>
    <string name="b64">b64</string>
    <string name="b65">b65</string>
    <string name="b66">b66</string>
    <string name="b67">b67</string>
    <string name="b70">b70</string>
    <string name="b71">b71</string>
    <string name="b72">b72</string>
    <string name="b73">b73</string>
    <string name="b74">b74</string>
    <string name="b75">b75</string>
    <string name="b76">b76</string>
    <string name="b77">b77</string>
</resources>