<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/name_screen"
        android:layout_width="385dp"
        android:layout_height="774dp"
        android:contentDescription="@string/name_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        app:srcCompat="@drawable/name_screen" />

    <EditText
        android:id="@+id/player_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#594B4B"
        android:ems="14"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/player_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        android:textColor="#030A0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <EditText
        android:id="@+id/player_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="#594B4B"
        android:ems="14"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/player_2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        android:textColor="#030A0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_1_name"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/done_name"
        android:layout_width="306dp"
        android:layout_height="91dp"
        android:background="@color/transparent"
        android:contentDescription="@string/done"
        android:longClickable="true"
        android:onClick="done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_2_name"
        app:layout_constraintVertical_bias="0.415" />
</androidx.constraintlayout.widget.ConstraintLayout>